<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lv.lv2.Lv2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TableLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_username_label"
                    android:gravity="center"
                    />
                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_username_hint"
                    android:id="@+id/login_username2"
                    android:gravity="center"
                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_password_label"
                    android:gravity="center"
                    />
                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_password_hint"
                    android:id="@+id/login_password2"
                    android:inputType="textPassword"
                    android:gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/login_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"></Button>
            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>