<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lv.lv3.Lv3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TableLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lv3_button1"
                    android:text="@string/lv3_button1"
                    android:gravity="center"
                    />
                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/lv3_edit_text1"
                    android:gravity="center"
                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lv3_button2"
                    android:text="@string/lv3_button2"
                    android:gravity="center"
                    />
                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/lv3_edit_text2"
                    android:gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/lv3_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lv3_button3"></Button>
            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>